Added test coveage via AI (#34)
Co-authored-by: Brian Vaughn <bfvaughn@@gmail.com>